policies/tests/generate-web-tier-quota/generated-quota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: web-tier-quota
  namespace: payments-web
  labels:
    app.kubernetes.io/managed-by: kyverno
    policy.synorg.io/name: generate-web-tier-quota
spec:
  hard:
    requests.cpu: "8"
    requests.memory: 16Gi
    limits.cpu: "16"
    limits.memory: 32Gi
    pods: "50"
    requests.nvidia.com/gpu: "0"
---
apiVersion: v1
kind: LimitRange
metadata:
  name: web-tier-limits
  namespace: payments-web
  labels:
    app.kubernetes.io/managed-by: kyverno
    policy.synorg.io/name: generate-web-tier-quota
spec:
  limits:
    - type: Container
      default:
        cpu: "1"
        memory: 512Mi
      defaultRequest:
        cpu: 100m
        memory: 128Mi
      max:
        cpu: "4"
        memory: 8Gi
